# chipichipi

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chipichipi/: app.py  database.py  main.py  models.py  player.py  player_controls.py  progress_dialog.py  scanner.py  worker.py
tests/: test_filename_parsing.py  test_scanner.py  test_song_player.py
